--- a/Russell-A4.ipynb
+++ b/Russell-A4.ipynb
@@ -514,10 +514,11 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
-    "\n",
     "class NeuralNetworkClassifier:\n",
     "\n",
     "    def __init__(self, input_dim, hidden_dims, output_dim):\n",
+    "        #  Initializes the neural network with given input, hidden, and output layer dimensions, and initializes the weights and biases with Glorot initialization.\n",
+    "\n",
     "        self.input_dim = input_dim\n",
     "        self.hidden_dims = hidden_dims\n",
     "        self.output_dim = output_dim\n",
@@ -527,6 +528,7 @@
     "        self._initialize_weights()\n",
     "\n",
     "    def _initialize_weights(self):\n",
+    "        # Helper method that initializes the weights and biases for all layers using Glorot initialization.\n",
     "        # Initialize weights and biases for all layers\n",
     "        all_dims = [self.input_dim] + self.hidden_dims + [self.output_dim]\n",
     "        for i in range(self.num_layers):\n",
@@ -540,6 +542,7 @@
     "            self.biases.append(bias)\n",
     "\n",
     "    def _forward(self, X):\n",
+    "        # Performs a forward pass through the network to calculate the activations for each layer given the input X.\n",
     "        # Forward pass through all layers\n",
     "        activations = [X]\n",
     "        for i in range(self.num_layers):\n",
@@ -549,6 +552,7 @@
     "        return activations\n",
     "\n",
     "    def _backward(self, X, T, Y, activations):\n",
+    "        # Performs a backward pass through the network to calculate the gradients for each layer given the input X, the target variable T, the predicted output Y, and the activations for each layer.\n",
     "        # Backward pass to calculate gradients\n",
     "        num_samples = X.shape[0]\n",
     "        gradients = []\n",
@@ -565,15 +569,18 @@
     "        return gradients\n",
     "\n",
     "    def _update_params(self, gradients, activations, learning_rate):\n",
+    "        # Updates the weights and biases for each layer using the gradients calculated by the backward pass and a given learning rate.\n",
     "        # Update weights and biases using gradients and learning rate\n",
     "        for i in range(self.num_layers):\n",
     "            self.weights[i] -= learning_rate * np.dot(activations[i].T, gradients[i])\n",
     "            self.biases[i] -= learning_rate * np.sum(gradients[i], axis=0)\n",
     "\n",
     "    def _sigmoid(self, X):\n",
+    "        # Applies the sigmoid function element-wise to the input X.\n",
     "        return 1 / (1 + np.exp(-X))\n",
     "\n",
     "    def train(self, X, T, num_epochs, learning_rate=0.01, method='gd', verbose=False):\n",
+    "        # Trains the neural network using the given input X and target variable T for a specified number of epochs and a given learning rate using the specified optimization method. This method also computes the likelihood and error for monitoring the training progress.\n",
     "        # One-hot encode the target variable\n",
     "        encoder = OneHotEncoder(sparse=False)\n",
     "        T_onehot = encoder.fit_transform(T.reshape(-1, 1))\n",
@@ -587,7 +594,7 @@
     "            likelihood = np.sum(T_onehot * np.log(Y)) / X.shape\n",
     "\n",
     "    def use(self, X):\n",
-    "        # Use the trained neural network to make predictions on new data\n",
+    "        # Uses the trained neural network to make predictions on new data X.\n",
     "        activations = self._forward(X)\n",
     "        Y = activations[-1]\n",
     "        # Return the predicted class labels (i.e., the indices of the maximum values in each row)\n",
